--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">LOL Timer</string>
     <string name="title_app">LOL TIMER</string>
+    <string name="settings">Settings</string>
+    <string name="commands">Commands</string>
+    <string name="start">Start</string>
 
 </resources>
