--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="title_app">LOL TIMER</string>
     <string name="settings">Settings</string>
     <string name="commands">Commands</string>
+    <string name="permissionDenied">Permission Denied</string>
+    <string name="givePermission">Give Permission</string>
     <string name="start">Start</string>
 
 </resources>
