--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_app">LOL TIMER</string>
     <string name="settings">Settings</string>
     <string name="commands">Commands</string>
+    <string name="command">Command</string>
     <string name="inicial_commands_text">Command: Speak Your Command</string>
     <string name="permissionDenied">Permission Denied</string>
     <string name="givePermission">Give Permission</string>
@@ -14,6 +15,13 @@
     <string name="summonerName">Summoner Name:</string>
     <string name="error">Incorrect Summoner Or Region</string>
     <string name="putSummonerName">The Kindred</string>
+    <string name="custom_commands">Create Custom Commands</string>
+    <string name="custom_commands_type">Type Your Command</string>
+    <string name="command_created">Command Created</string>
+
+    <string name="create">CREATE</string>
+    <string name="custom_commands_existings">Existing Custom Commands</string>
+
 
     <!--    <string name="putSummonerName">Put Your Summoner Name</string>-->
     <string name="region">Region:</string>
